# NarradiaVR

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.gradle  build.sh  clean.sh  run.sh  sensor_off.sh  sensor_on.sh
src/: Game.cpp  Main.cpp  Pch.h  Win32CompileSpecific.h
src/common/: Singleton.h  SingletonManager.cpp  SingletonManager.h  class_Singleton.h  system_SingletonManager.cpp  system_SingletonManager.h
src/controller/: EngineController.cpp  EngineController.h  InputActionsController.cpp  SceneManagerController.cpp  SceneManagerController.h  SystemEventPollerController.cpp  SystemEventReaderController.cpp  SystemEventReaderController.h  class_InputController.cpp  class_InputController.h  system_ControllerInput.h
src/cpp/: Game.cpp  Game.h  Genesis.cpp  Genesis.h  Main.cpp  Pch.cpp  Pch.h
src/cpp/.design/: ideas.txt
src/cpp/common/: Singleton.cpp  Singleton.h  SingletonsCleanup.cpp  SingletonsCleanup.h  Typedefs.h
src/cpp/common/system/: Singleton.h  SingletonsCleanup.cpp  SingletonsCleanup.h  Ston.h  Typedefs.h
src/cpp/core.assets/model/: ImageBank.cpp  ImageBank.h  ModelBank.cpp  ModelBank.h
src/cpp/core.input_actions/controller/: HandDeviceInputPollController.cpp  InputActionsCreateController.cpp  InputActionsCreateController.h  InputPollController.cpp  InputPollController.h
src/cpp/core.input_actions/model/: InputState.cpp  InputState.h
src/cpp/core.model.make/model/: ModelCreator.h  ModelPartCreator.cpp  ModelPartCreator.h
src/cpp/core.model.struct/model/: ModelPartKeyframe.h
src/cpp/core.model_creation/model/: ModelCreator.h  ModelPartCreator.cpp  ModelPartKeyframeCreator.h
src/cpp/core.model_struct/model/: Model.cpp  Model.h  ModelPart.h
src/cpp/core.render/view/: BodyData.h  BufferTypes.h  RendererBaseView.h  RendererFacelockedView.cpp  RendererFacelockedView.h  RendererModelsView.cpp  RendererModelsView.h  RendererTilesView.cpp  RendererTilesView.h  ShaderProgView.cpp  ShaderSrcRendererFacelockedVertex.inc.cpp  (+3 more)
src/engine/: AddmajaGame.cpp  AddmajaGame.h  AndroidAppManager.cpp  AndroidAppManager.h  Game.cpp  Game.h  OptionsManager.cpp  OptionsManager.h  VRApp.cpp  VRApp.h  func_Utilities.h  system_AddmajaGame.cpp  system_AddmajaGame.h  system_AndroidAppManager.cpp  system_AndroidAppManager.h  system_Game.cpp  system_Game.h  system_OptionsManager.cpp  system_OptionsManager.h  system_VRApp.cpp  system_VRApp.h
src/engine.rendering/view/: system_CubeLayer.cpp  system_CubeLayer.h  system_Renderer.cpp  system_Renderer.h
src/engine/controller/: EngineController.cpp  EngineController.h  ISceneController.h  InputActionsController.cpp  InputActionsController.h  SceneManagerController.cpp  SceneManagerController.h  SystemEventPollerController.cpp  SystemEventPollerController.h  SystemEventReaderController.cpp
src/engine/core/: AndroidAppState.h  EventPoller.cpp  EventPoller.h  EventReader.cpp  EventReader.h  GameLoop.cpp  GameLoop.h  IScene.cpp  IScene.h  Loader.cpp  Loader.h  SceneManager.cpp  SceneManager.h  SceneNames.h  SystemEventPoller.cpp  SystemEventPoller.h  SystemEventReader.cpp  SystemEventReader.h  class_IScene.cpp  class_IScene.h  enum_SceneNames.h  struct_AndroidAppState.h  system_GameLoop.cpp  system_GameLoop.h  system_Loader.cpp  system_Loader.h  system_SceneManager.cpp  system_SceneManager.h  system_SystemEventPoller.cpp  system_SystemEventPoller.h  system_SystemEventReader.cpp  system_SystemEventReader.h
src/engine/model/: AndroidAppState.h  AndroidPlatform.h  AndroidVRAppManager.h  Engine.cpp  Engine.h  HandDevice.cpp  HandDeviceInput.h  IScene.h  ImageBank.cpp  InputState.h  Loader.cpp  ModelBank.cpp  OpenXrProgram.h  Options.cpp  OptionsManager.cpp  ProgramLogger.cpp  SceneManager.cpp  SceneManager.h  func_Math.Pose.h  struct_Swapchain.h
src/engine/system/: Singleton.cpp  system_AndroidAppManager.h  system_AndroidPlatform.cpp  system_Loader.cpp  system_Loader.h  system_OpenXrProgram.cpp  system_OpenXrProgram.h  system_Options.cpp  system_Options.h  system_OptionsManager.cpp  system_OptionsManager.h  system_ProgramLogger.cpp  system_ProgramLogger.h  system_VRApp.cpp  system_VRApp.h
src/engine/view/: CubeLayerView.cpp  CubeLayerView.h  EngineView.cpp  EngineView.h  GraphicsGLView.cpp  GraphicsGLView.h  ISceneView.h  RendererView.cpp  RendererView.h  SceneManagerView.cpp  SceneManagerView.h  ShaderProgramView.cpp  ShaderProgramView.h  class_ShaderProgram.cpp  system_GraphicsGL.cpp  system_GraphicsGL.h
src/matter/: Colors.h  Cube.h  Point.h  Vertex.h  VertexCube.cpp  VertexCube.h  class_VertexCube.cpp  class_VertexCube.h  const_Colors.h  struct_Cube.h  struct_Point.h  struct_Vertex.h
src/matter/model/: Vertex.h  VertexCube.cpp
src/model/: Engine.cpp  Engine.h  SceneManager.cpp  SceneManager.h  bank_ImageBank.cpp  bank_ImageBank.h  class_IScene.cpp  func_GetXrReferenceSpaceCreateInfoTiles.h  struct_InputState.h
src/model/matter/: class_VertexCube.h  const_Colors.h  struct_Cube.h
src/scenes/intro/: scene_IntroScene.cpp  scene_IntroScene.h
src/scenes/main/: scene_MainScene.cpp  scene_MainScene.h
src/scenes/main_menu/: scene_MainMenuScene.cpp  scene_MainMenuScene.h
src/system/: class_Singleton.cpp  func_Utilities.cpp  system_AndroidAppManager.h  system_OpenXrProgram.cpp  system_OpenXrProgram.h  system_Options.cpp  system_VRApp.cpp
src/utilities/model/: Util.cpp  Util.h
src/utilities/view/: UtilView.cpp  UtilView.h
src/view/: EngineView.cpp  EngineView.h  SceneManagerView.cpp  SceneManagerView.h  class_ShaderProgram.cpp  class_ShaderProgram.h  system_GraphicsGL.cpp  system_GraphicsGL.h
src/view/rendering/: system_Renderer.cpp  system_Renderer.h
src/view/shaders/: shader_FragmentShader.inc.cpp  shader_VertexShader.inc.cpp
src/world/: Player.h  world_Player.h
(+363 files in other folders)
